[tool.poetry]
name = "srs-distinct-values"
version = "0.1.0"
description = "Collect distinct values from each column in any given csv file"
authors = ["https://github.com/ONS-HAPI"]

[[tool.poetry.source]]
name = "artifactory"
url = "http://<USERNAME>:<ENCRYPTED-PASSWORD>@art-p-01/artifactory/api/pypi/yr-python/simple"
default = true


[tool.poetry.dependencies]
python = "^3.6.1"
dask = "^2021.2.0"
pandas = "^1.1.4"
toolz = "^0.11.1"
tornado = "^6.1"
fsspec = "^0.8.7"
tqdm = "^4.58.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
[tool.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
